--- a/CarDealer/Views/Items/CreateForm.cshtml
+++ b/CarDealer/Views/Items/CreateForm.cshtml
@@ -1,6 +1,16 @@
 <h1>Car Listing</h1>
 <form action="/items" method="post">
-  <label for="new-item">Add a new Car</label>
-  <input id="new-item" name="new-item" type="text">
+  <label for="new-item">Add a Make and Model</label>
+  <input id="new-item" name="new-item" type="text"><br>
+
+  <label for="new-item">List its Year</label>
+  <input id="new-item" name="new-item" type="text"><br>
+
+  <label for="new-item">List its Mileage</label>
+  <input id="new-item" name="new-item" type="text"><br>
+
+  <label for="new-item">List its Price</label>
+  <input id="new-item" name="new-item" type="text"><br>
+  
   <button type="submit">Submit</button>
 </form>
