--- a/CarDealer/Views/Items/index.cshtml
+++ b/CarDealer/Views/Items/index.cshtml
@@ -1,8 +1,8 @@
 <h1>Car List</h1>
 <ul>
-  @foreach(var item in Model)
+  @foreach(var string in Model)
  {
-  <li>@cars.GetDescription()
+  <li>@string
   </li>
  }
   </ul>
